# quick-ftxui

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  format.sh
.github/: linux_build.yml  windows_build.yml
.github/workflows/: clang-format-check.yml  linux_build.yml  linux_build_no_boost.yml  windows_build.yml  windows_build_no_boost.yml
cmake/: quick-ftxui-config.cmake.in
cpp_examples/: CMakeLists.txt  example.cpp
examples/: Button.qf  Dropdown.qf  Menu.qf  RadioBox.qf  Slider.qf  Toggle.qf  border.qf  check.qf  colors.qf  input.qf  menu_toggle_dropdown.qf  multiple_alignment.qf  multiple_components.qf  paragraph.qf  radio_check_box.qf  radiobox.qf  separator.qf  simple.qf  text.qf  text_styles.qf  toggle.qf
include/: ast.h  codeprinter.h  quick-ftxui.hpp  symbol_table.h
snap/: snapcraft.yaml
src/: ast.c  codeprinter.c  lexer.c  lexer.l  main.c  parser.y  quick-ftxui.cpp  symbol_table.c
tests/: test1.cpp  test2.cpp
